--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^9.0.1",
-    "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0"
+    "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.0"
   }
 }
 </script>
